--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "directories": {
     "test": "tests"
-  },  
+  },
   "dependencies": {
     "bower": "^1.6.8",
     "express": "^4.13.3"
@@ -23,7 +23,7 @@
     "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.3",
-    "phantomjs": "^1.9.19"
+    "phantomjs": "^1.9.19",
+    "protractor": "^3.0.0"
   }
 }
-
