initial template setup

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "deloitte-test",
-  "homepage": "https://github.com/d9nny/auto-pair2",
+  "name": "atlantic",
+  "homepage": "https://github.com/d9nny/atlantic",
   "authors": [
     "danwheeler <da-wheeler@hotmail.co.uk>"
   ],
