--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,8 @@
   "devDependencies": {
     "angular-mocks": "^1.4.9",
     "angular-route": "^1.4.9"
+  },
+  "resolutions": {
+    "angular": "~1.4.9"
   }
 }
-
